# synheart-auth-flutter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  synheart_native_bridge.cpp
android/src/main/kotlin/ai/synheart/auth/flutter/: NativeCryptoBridge.kt  PlayIntegrityAttestationProvider.kt  SynheartAuthPlugin.kt
android/src/main/kotlin/com/synheart/auth/flutter/: SynheartAuthPlugin.kt
ios/: synheart_auth.podspec
ios/Classes/: SynheartAuthPlugin.swift
ios/Classes/SynheartAuth/: SynheartAuth.swift
ios/Classes/SynheartAuth/Crypto/: KeyManager.swift  NativeCryptoBridge.swift  RequestSigner.swift
ios/Classes/SynheartAuth/Internal/: AuthLogger.swift  ClockSkewTracker.swift
ios/Classes/SynheartAuth/Models/: AuthError.swift  AuthModels.swift  AuthState.swift
ios/Classes/SynheartAuth/Network/: AuthNetworkClient.swift  NetworkModels.swift
ios/Classes/SynheartAuth/Registration/: DeviceRegistrar.swift
ios/Classes/SynheartAuth/Storage/: StorageManager.swift
lib/: synheart_auth.dart
lib/src/: synheart_auth.dart
lib/src/internal/: platform_bridge.dart
lib/src/models/: auth_error.dart  auth_models.dart  auth_state.dart
test/: auth_error_test.dart  auth_models_test.dart  auth_state_test.dart  platform_bridge_test.dart  synheart_auth_test.dart
(+1 files in other folders)
